Fix database driver compatibility - switch to Neon

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your_bot_token_here
 
-# Database Configuration
-POSTGRES_URL=your_vercel_postgres_url_here
+# Database Configuration (Neon)
+DATABASE_URL=your_neon_database_url_here
 
 # App Configuration
 VERCEL_URL=https://your-app.vercel.app
