--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "next": "14.0.0",
+    "node-telegram-bot-api": "^0.64.0",
     "react": "^18",
-    "react-dom": "^18",
-    "@vercel/postgres": "^0.5.0",
-    "node-telegram-bot-api": "^0.64.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/node-telegram-bot-api": "^0.64.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/node-telegram-bot-api": "^0.64.0",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "typescript": "^5"
   }
 }
