feat: implement quest economy system database schema and migrations
- Add comprehensive database schema for quest economy system
- Extend users table with rank and experience tracking
- Extend wishes table with categories and sharing capabilities
- Extend transactions table with experience and categories
- Add new tables: quests, random_events, wish_categories, ranks, economy_settings
- Create migration system with versioned SQL files
- Add seed data for ranks and wish categories
- Implement database functions for new entities
- Add validation tools for migration safety
- Create comprehensive documentation
- Maintain backward compatibility with existing code

Resolves task 1: Database Schema Migration and Core Infrastructure

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "node scripts/run-migrations.js",
+    "validate-migrations": "node scripts/validate-migrations.js",
+    "init-db": "node scripts/init-db.js"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
@@ -21,6 +24,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.6.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "postcss": "^8",
