--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "framer-motion": "^12.23.12",
     "next": "14.0.0",
     "node-telegram-bot-api": "^0.64.0",
     "react": "^18",
