--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint",
     "migrate": "node scripts/run-migrations.js",
     "validate-migrations": "node scripts/validate-migrations.js",
-    "init-db": "node scripts/init-db.js"
+    "init-db": "node scripts/init-db.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
@@ -24,12 +27,16 @@
     "@types/node-telegram-bot-api": "^0.64.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitest/coverage-v8": "^1.0.0",
     "autoprefixer": "^10.0.1",
     "dotenv": "^16.6.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
+    "jsdom": "^23.0.0",
+    "node-mocks-http": "^1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.0.0"
   }
 }
