feat: implement performance optimization and monitoring system
- Add comprehensive database performance optimizations
  - Advanced composite indexes for complex queries
  - Partial indexes for specific query patterns
  - JSONB GIN indexes for metadata queries
  - Text search indexes for descriptions
  - Covering indexes for common SELECT patterns
  - Materialized views for user statistics
  - Performance monitoring functions and views

- Implement application performance monitoring
  - Real-time API response time tracking
  - Component render time monitoring
  - Error tracking and categorization
  - Metrics export (JSON/Prometheus formats)
  - React hooks and error boundaries

- Add comprehensive caching system
  - In-memory caching with TTL
  - LRU eviction policy
  - Cache statistics and analytics
  - Specialized caches for different data types
  - Cache preloading and backup/restore

- Implement error tracking system
  - Global error handlers
  - Error fingerprinting and grouping
  - Severity classification
  - Error trends and statistics
  - Integration-ready for external services

- Add performance dashboard
  - Real-time performance metrics display
  - Alert system with recommendations
  - Interactive dashboard with auto-refresh
  - API endpoints for metrics export

- Create API middleware for monitoring
  - Performance monitoring wrapper
  - Rate limiting capabilities
  - Error tracking integration
  - Request/response caching

- Complete task 10: Performance Optimization and Monitoring
  - Task 10.1: Database performance optimizations ✅
  - Task 10.2: Application performance monitoring ✅

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "migrate": "node scripts/run-migrations.js",
+    "migrate:data": "node scripts/run-data-migrations.js",
+    "generate:seed": "node scripts/generate-seed-data.js",
     "validate-migrations": "node scripts/validate-migrations.js",
+    "validate:data": "node scripts/validate-data-migrations.js",
     "init-db": "node scripts/init-db.js",
     "test": "vitest run",
     "test:watch": "vitest",
